name:                avl
version:             0.1.0.0
synopsis:            Set implementation using AVL Tree
description:         Please see README.md
homepage:            http://github.com/guibou/avlTree#readme
license:             BSD3
license-file:        LICENSE
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
copyright:           2015 Guillaume Bouchard
category:            data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Avl
                      ,Avl.Internal
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite avl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:     AvlSpec
                     , AvlInternalSpec
                     , TestUtils
  build-depends:       base
                     , avl
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/guibou/avlTree
